part1/Exercise_1.13_Project v0.7/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-project-svc
spec:
  type: ClusterIP
  selector:
    app: k8s-project # This is the app as declared in the deployment.
  ports:
    - protocol: TCP
      port: 1234 # This is a port that is available to the cluster, in this case it can be ~ anything
      targetPort: 3003 # This is the target port
